--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <body>
             <div class="container">
-        <img class="logo" src="https://fenno.net/images/logo.svg" alt="Fenno's Logo">
+        <img class="logo" src="https://g.twimg.com/Twitter_logo_blue.png" alt="Fenno's Logo">
         <ul class="horizontal-list">
             <li>
-                <a href="//twitter.com/FennoBear" title="Fenno on Twitter" target="_blank">
+                <a href="//twitter.com/minecrafter418" title="MC418 on Twitter" target="_blank">
                     <i class="fa fa-twitter"></i>
                 </a>
             </li>
