--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en"><head>
-        <title>MC418 </title>
+        <title>MC418</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#cc0000">
@@ -11,10 +11,10 @@
 
     <body>
             <div class="container">
-        <img class="logo" src="https://g.twimg.com/Twitter_logo_blue.png" alt="Fenno's Logo">
+        <img class="logo" src="http://signaturecraft.us/avatars/30/face/MC418.png" alt="MC418 Logo">
         <ul class="horizontal-list">
             <li>
-                <a href="//twitter.com/minecrafter418" title="MC418 on Twitter" target="_blank">
+                <a href="//twitter.com/FennoBear" title="Fenno on Twitter" target="_blank">
                     <i class="fa fa-twitter"></i>
                 </a>
             </li>
