--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             </li>
 
             <li>
-                <a href="//www.youtube.com/user/Fennoman12" title="Fenno on YouTube" target="_blank">
+                <a href="//www.youtube.com/user/minecrafter41801" title="MC418 on YouTube" target="_blank">
                     <i class="fa fa-youtube-play"></i>
                 </a>
             </li>
 
             <li>
-                <a href="//www.twitch.tv/Fennoman" title="Fenno on Twitch" target="_blank">
+                <a href="//www.twitch.tv/MC418" title="MC418 on Twitch" target="_blank">
                     <i class="fa fa-twitch"></i>
                 </a>
             </li>
 
             <li>
-                <a href="//medium.com/@Fenno" title="Fenno on Medium" target="_blank">
+                <a href="//medium.com/@MC418" title="MC418 on Medium" target="_blank">
                     <i class="fa fa-pencil"></i>
                 </a>
             </li>
