--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class="logo" src="http://signaturecraft.us/avatars/30/face/MC418.png" alt="MC418 Logo">
         <ul class="horizontal-list">
             <li>
-                <a href="//twitter.com/minecrafter418r" title="MC418 on Twitter" target="_blank">
+                <a href="//twitter.com/minecrafter418" title="MC418 on Twitter" target="_blank">
                     <i class="fa fa-twitter"></i>
                 </a>
             </li>
