--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
             <div class="container">
-        <img class="logo" src="http://signaturecraft.us/avatars/30/face/MC418.png" alt="MC418 Logo">
+        <img class="logo" src="http://pinkie.mylittlefacewhen.com/media/f/rsz/mlfw5616_huge.png" alt="MC418 Logo">
         <ul class="horizontal-list">
             <li>
                 <a href="//twitter.com/minecrafter418" title="MC418 on Twitter" target="_blank">
