--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </li>
 
             <li>
-                <a href="//medium.com/@MC418" title="MC418 on Medium" target="_blank">
-                    <i class="fa fa-pencil"></i>
+                <a href="//facebook.com/@MC418" title="MC418 on Facebook" target="_blank">
+                    <i class="<i class="fa fa-facebook"></i>"></i>
                 </a>
             </li>
         </ul>
