--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <li>
                 <a href="//facebook.com/@MC418" title="MC418 on Facebook" target="_blank">
-                    <i class="<i class="fa fa-facebook"></i>"></i>
+                    <i class="fa fa-facebook"></i>
                 </a>
             </li>
         </ul>
